# kbi-self-rewrite

./: Workspace.code-workspace
analyzer/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
analyzer/src/: App.svelte  app.css
analyzer/src/lib/analyzer/: analyzer.svelte.ts  analyzer_fft_thread.ts  postprocess.ts
analyzer/src/lib/components/: ChartProps.ts  DiffChart.svelte  FreqChart.svelte
analyzer/src/lib/components/charts/: DiffChart.svelte  FreqChart.svelte  InputTimeline.svelte  chartFactory.ts  quantizedTickLinearScale.ts  synchronizeZoom.ts  themeChanger.svelte.ts  yeOldeMinMax.ts
analyzer/src/lib/components/ui/chart/: chart-container.svelte
analyzer/src/lib/helper/: vk_to_keycode.ts
analyzer/src/lib/keycode/: keycode.ts
analyzer/src/lib/parser/: parser.ts  parser_kbi_legacy.ts
analyzer/src/lib/validator/: validator.ts
analyzer/src/pages/: Analysis.svelte
recorder/: CMakeLists.txt  CMakePresets.json  vcpkg.json
recorder/include/: device.h  keycode.h  recorder.h
recorder/src/: main.cpp  portable_getch.c
recorder/src/controller/: controller.h  controller_console.cpp  controller_websocket.cpp
recorder/src/core/keycode/: keycode_to_string.cpp
recorder/src/core/recorder/: recorder.cpp  recorder_impl.h
recorder/src/core/recorder/linux/: device_name.cpp  device_name.h  evdev_key_codes.h  evdev_to_hid.cpp  evdev_to_hid.h  evdev_to_keycode.cpp  evdev_to_keycode.h  impl.h  recorder_linux.cpp  recorder_linux_libevdev.cpp
recorder/src/core/recorder/win/: device_name.cpp  device_name.h  impl.h  recorder_win.cpp  recorder_win_gameinput.cpp  recorder_win_rawinput.cpp  vk_to_hid.h  vk_to_keycode.cpp  vk_to_keycode.h  wstring.cpp  wstring.h
recorder/src/exporter/: exporter.h  exporter_mat_kbi.cpp
recorder/src/helper/: helper_os.cpp
recorder/src/serializer/: serializer.cpp  serializer.h  serializer_json.cpp
recorder/src/system/: helper_os.cpp  helper_os.h  info.h  info_linux.cpp  info_win.cpp
